Decode queryString parameters in the session. (1.7.1)